DP-740 Jenkins - Add end-to-end high traffic tests (large number of users) for app