@@ -83,6 +83,62 @@
         </profile>
 
         <profile>
+            <id>load</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+
+                        <executions>
+                            <execution>
+                                <id>unit-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>functional-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>load-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>integration-test</phase>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <numOfThreads>${THREADS_NUM}</numOfThreads>
+                                        <numOfTenants>${TENANTS_NUM}</numOfTenants>
+                                        <numOfUsers>${USERS_NUM}</numOfUsers>
+                                        <numOfRuns>${RUNS_NUMBER}</numOfRuns>
+                                    </systemPropertyVariables>
+                                    <argLine>-XX:MaxPermSize=256m ${argLine}</argLine>
+                                    <skip>false</skip>
+                                    <includes>
+                                        <include>${load.classes.include}</include>
+                                    </includes>
+                                    <groups>${load.groups}</groups>
+                                    <forkMode>always</forkMode>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>generate</id>
             <build>
                 <resources>
